# contextual-audio-synthesis-pipeline

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
casp/: __init__.py  cli.py  config.py
casp/dramatic/: graph.py  state.py
casp/dramatic/agents/: sensory_renderer.py  subtext_editor.py  tension_architect.py
casp/dramatic/prompts/: sensory_renderer.txt  subtext_editor.txt  tension_architect.txt
casp/ingestion/: denoiser.py  loader.py
casp/models/: __init__.py  dramatic.py  ingestion.py  pipeline_state.py  scene.py
casp/synthesis/: audio_assembler.py  elevenlabs_client.py  parameter_mapper.py
casp/utils/: json_parser.py  llm.py  logging.py
examples/: psychology_input.json
tests/: conftest.py
tests/fixtures/: fixture_context_payload.json  fixture_sensory_script.json  fixture_subtext_review.json  fixture_tension_map.json  sample_context_payload.json  sample_scene.json
tests/integration/: test_dramatic_graph.py
tests/unit/: test_json_parser.py  test_models.py  test_parameter_mapper.py  test_subtext_editor.py
