[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casp"
version = "0.1.0"
description = "Contextual Audio Synthesis Pipeline — Multi-Agent Podcast Production System"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "elevenlabs>=1.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "pydub>=0.25",
    "httpx>=0.27",
    "rich>=13",
    "feedparser>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
]

[project.scripts]
casp = "casp.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["casp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
